# Docker_hello

./: pyproject.toml
django_project/: settings.py
pages/: views.py
