[tool.poetry]
name = "ch2-hello"
version = "0.1.0"
description = ""
authors = ["Jose Rojas <joseyx041199@gmail.com>"]
readme = "README.md"
packages = [{include = "ch2_hello"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
